Fix compilation with Qt 5 on MeeGo 1.2 Harmattan https://bugs.webkit.org/show_bug.cgi?id=96937

Patch by Simon Hausmann <simon.hausmann@digia.com> on 2012-09-18
Reviewed by Jocelyn Turcotte.

The gl2ext.h header file on the platform is outdated. Instead use the newer copy from Qt
through implicit inclusion of qopengl.h. Since Qt's declarations are based on newer Khronos
headers, the multi sampling extensions do have the PROC suffix, we need the same workaround
as QNX.

* platform/graphics/opengl/Extensions3DOpenGLES.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@128877 bbb929c8-8fbe-4397-9dbb-9b2b20218538